# grpc-sample

./: .gitignore  Cargo.toml  Makefile.toml  README.md
app/: Cargo.toml
app/src/: lib.rs
common/: Cargo.toml
common/src/: external_libs.rs  lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
infra/: Cargo.toml
