[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
infra = { path = "../infra" }

tonic = "0.8.2"
tonic-reflection = "0.5.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
envconfig = "0.10.0"

